fix bottom row img alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,7 @@ img {
 }
 
 .bottom-row {
-    margin-top: 23px;
+    margin-top: 13px;
     margin-bottom: 30px;
 }
 
